feat: Initialise l'application avec la fenêtre principale, la structure de l'interface utilisateur, les pages et la configuration de base.

--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
   "theme": "System",
   "auto_restart": false,
   "language": "System",
-  "animated_bg": true
+  "animated_bg": true,
+  "transparency": "None"
 }
