--- a/v2_tauri/package.json
+++ b/v2_tauri/package.json
@@ -11,7 +11,8 @@
     "tauri:build:win": "tauri build --target x86_64-pc-windows-msvc",
     "tauri:build:mac": "tauri build --target universal-apple-darwin",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
+    "tauri": "tauri"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -26,6 +27,7 @@
   "dependencies": {
     "@fontsource-variable/recursive": "^5.2.8",
     "@tauri-apps/api": "^2.1.0",
+    "@tauri-apps/plugin-dialog": "^2.4.2",
     "gsap": "^3.14.2"
   }
 }
