--- a/v2_tauri/src-tauri/Cargo.toml
+++ b/v2_tauri/src-tauri/Cargo.toml
@@ -25,3 +25,15 @@ tauri = { version = "2.1.1", features = [] }
 tauri-plugin-log = "2"
 ttf-parser = "0.24.0"
 walkdir = "2.5"
+reqwest = { version = "0.12", features = ["json", "blocking"] }
+
+# Optimization for Windows linking
+[profile.dev]
+incremental = true
+split-debuginfo = "unpacked"
+
+[profile.release]
+codegen-units = 1
+lto = true
+strip = true
+panic = "abort"
